--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,37 @@
-<p>about works!</p>
+<!-- ----about section----------------------------- -->
+
+<section class="section-pad gradient-light-to-dark " id="about-section">
+
+<div class="about-text">
+<h2 > About me </h2>
+  <!-- <div class="about-info"> -->
+<p>I am Abdelrahman Kamal, I am a full-stack developer and a multi-skilled Biomedical Software Engineer with a passion for creating web apps and innovative solutions at the intersection of technology and healthcare.</p><br>
+<p>
+ Currently, I am pursuing a BSc in Systems and
+Biomedical Engineering at Cairo University, where I have
+gained a solid foundation in software development, deep
+ learning, medical devices, and embedded systems.</p><br>
+<p>
+ Over the past few years, I've had the opportunity to
+work in various roles, from a Frontend Development
+internship, where I honed my skills in making landing
+pages, web design and version control, To MEAN stack web
+developer internship at NTI the
+National telecommunication Institute in Egypt.</p ><br>
+
+<p>I am a fast learner, adaptable, and team player.
+I am always eager to take on new challenges and am
+passionate about leveraging technology to solve real-world
+problems by developing software and creating responsive
+performant web applications.</p><br>
+
+<p>
+I am committed to delivering high-quality, impactful <br>solutions.Let's connect and explore how we can collaborate <br>to create innovative technology solutions that make a difference in the world!</p>
+
+
+</div>
+
+<div class="about-figure">
+  <div class="about-img"></div>
+</div>
+</section>
