--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,17 @@
-<p>nav works!</p>
+
+
+    <header class="header">
+  
+      <a href="#hero-section" class="logo" >
+        <img src="images/dadabbremovebg-preview.png" alt="Abdelrahman kamal logo" class="" width="100" height="100"/>
+      </a>
+    <nav >
+      <ul class="navbar">
+        <li><a href="#about-section" class="link-item">About</a></li>
+        <li><a href="#skills-section" class="link-item">Skills</a></li>
+        <li><a href="#projects-section" class="link-item">Projects</a>
+       <li> <a  href="https://drive.google.com/file/d/1ZUHDFoImR4xSXzD2vPJIZyE9kZnkv9oJ/view" class="normal-btn " target="_blank">See my resume</a></li>
+      </ul>
+      </nav>
+  
+</header>
