--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,123 @@
-<p>projects works!</p>
+<!-- -----projects section---------------------------------------------------------- -->
+<section class="section-pad gradient-light-to-dark " id="projects-section">
+        <h2> Featured projects </h2>
+
+
+<div class="project-container">
+
+<a class="link-item" href="https://github.com/Abdelrahman776/Computer_Vision_Toolkit" target="_blank"> <h1>Computer_Vision_Toolkit</h1></a>
+
+<div class="project-content">
+  <div class="project-text">
+    <p>
+      An application that provide various computer vision
+      tools like:<br>
+      
+      1. canny edge detection.<br>
+      2. Harris corner detection.<br>
+      3. Hough line detection.<br>
+      4. Hough ellipse detection.<br>
+      5. Face Recognition based on eigen faces.<br>
+    </p>
+    </div><a class="link-item" href="https://github.com/Abdelrahman776/Computer_Vision_Toolkit" target="_blank"> 
+  <img  class="project-img"src="images/computer-vision.png" /></a>
+    </div>
+</div>
+
+
+
+<div class="project-container">
+
+<a class="link-item" href="https://github.com/Abdelrahman776/Tic-Tac-Toe-Angular" target="_blank"> <h1>Tic-Tac-Toe-Angular</h1></a>
+
+<div class="project-content">
+  <div class="project-text">
+    <p>
+     This is a simple Angular application that uses the
+                        Angular framework<br /> for server-side rendering using
+                        Angular Cli.<br /> It's a Tic-Tac-Toe game with a simple UI
+                        and some basic game logic.<br />
+                        <br />The game can be installed on any platform a PWA.
+                        try to download it<br /> from your browser on desktop.<br />
+    </p>
+    </div><a class="link-item" href="https://github.com/Abdelrahman776/Tic-Tac-Toe-Angular" target="_blank"> 
+  <img style="width: 32rem;" class="project-img"src="images/Xoapp.gif" /></a>
+    </div>
+</div>
+
+
+<div class="project-container">
+
+<a class="link-item" href="https://omnifood-akamal.netlify.app/" target="_blank"> <h1>Omni Food</h1></a>
+
+<div class="project-content">
+  <div class="project-text">
+    <p>
+      the landing page of Omni food a custom meals delivery
+startup<br> using HTML &amp; CSS &amp;  JS.
+    </p>
+    </div><a class="link-item" href="https://omnifood-akamal.netlify.app/" target="_blank"> 
+  <img  class="project-img"src="images/omin-food-pic.png" /></a>
+    </div>
+</div>
+
+
+<div class="project-container">
+
+<a class="link-item" href="https://github.com/Abdelrahman776/Live-Multichannel-Signal-Monitor" target="_blank"> <h1>   Live-Multichannel-Signal-Monitor</h1></a>
+
+<div class="project-content">
+  <div class="project-text">
+    <p>
+      This PyQt-powered application serves as a real-time
+vital sign monitoring system. It features a polished
+user interface that offers an intuitive platform for
+visualizing and analyzing vital signals.</p><br>
+<p> This tool
+empowers users to effortlessly navigate through a
+diverse array of signals, extracting pertinent
+information from each,<br> and even provides the flexibility
+to fine-tune them to precise specifications, delivering
+a tailored and insightful outcome.
+    </p>
+    </div><a class="link-item" href="https://github.com/Abdelrahman776/Live-Multichannel-Signal-Monitor" target="_blank"> 
+  <img  class="project-img"src="images/live-multichannel.jpg" /></a>
+    </div>
+</div>
+
+<div class="project-container">
+
+<a class="link-item" href="https://github.com/Abdelrahman776/Real-time-Medical-Data-Monitoring-System" target="_blank"> <h1> Real-time Medical Data Monitoring System</h1></a>
+
+<div class="project-content">
+  <div class="project-text">
+    <p>
+     This system is designed to simulate the communication between a
+          medical device (client) and a server application, storing and
+          visualizing vital sign data in real-time. The system comprises three
+          main components:<br /><br />
+          1. Client (Medical Device Simulator): Simulates a
+          medical device generating vital sign data and sending it to the
+          server.<br /><br />2. Server: Listens for incoming connections from client
+          devices, stores the received data in a Redis database.<br /><br />3. GUI (Data
+          Visualization): Provides a user-friendly interface to visualize and
+          search for patient vital sign data stored in Redis.
+    </p>
+    </div>
+    <a class="link-item" href="https://github.com/Abdelrahman776/Real-time-Medical-Data-Monitoring-System" target="_blank"> 
+  
+    </div>
+
+</div>
+
+
+
+<a style="text-shadow: #0676a4 0 0 3rem;" class="link-item"
+         href="https://github.com/Abdelrahman776?tab=repositories"
+         target="_blank"
+         ><h2 >  Explore all Projects  </h2>
+        </a>
+    
+
+
+    </section>
