--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,1 +1,48 @@
-<p>hero works!</p>
+<!-- hero section---------------- -->
+<section class="section-pad gradient-dark-to-light " id="hero-section">
+      
+        <div class="intro-text">
+          
+            
+    <h4 id="hey">  Hey, I’m</h4>
+    <h1 id="name" > Abdelrahman Kamal </h1>
+    <h2 style="font-size: 2rem;" >Software Engineer</h2>
+    <h4 id="get-in-touch">get in touch</h4>
+
+    <div class="contacts">
+    <ul class="main-links">   
+       <li><a href="https://www.linkedin.com/in/abdelrahmannkamal/" target="_blank" class="link-item"><svg  xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"  viewBox="0 0 50 50">
+    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
+</svg></a></li>
+
+        <li><a   target="_blank"href="https://github.com/Abdelrahman776" class="link-item">
+          <svg   xmlns="http://www.w3.org/2000/svg"   viewBox="0 0 64 64">
+<path d="M32 6C17.641 6 6 17.641 6 32c0 12.277 8.512 22.56 19.955 25.286-.592-.141-1.179-.299-1.755-.479V50.85c0 0-.975.325-2.275.325-3.637 0-5.148-3.245-5.525-4.875-.229-.993-.827-1.934-1.469-2.509-.767-.684-1.126-.686-1.131-.92-.01-.491.658-.471.975-.471 1.625 0 2.857 1.729 3.429 2.623 1.417 2.207 2.938 2.577 3.721 2.577.975 0 1.817-.146 2.397-.426.268-1.888 1.108-3.57 2.478-4.774-6.097-1.219-10.4-4.716-10.4-10.4 0-2.928 1.175-5.619 3.133-7.792C19.333 23.641 19 22.494 19 20.625c0-1.235.086-2.751.65-4.225 0 0 3.708.026 7.205 3.338C28.469 19.268 30.196 19 32 19s3.531.268 5.145.738c3.497-3.312 7.205-3.338 7.205-3.338.567 1.474.65 2.99.65 4.225 0 2.015-.268 3.19-.432 3.697C46.466 26.475 47.6 29.124 47.6 32c0 5.684-4.303 9.181-10.4 10.4 1.628 1.43 2.6 3.513 2.6 5.85v8.557c-.576.181-1.162.338-1.755.479C49.488 54.56 58 44.277 58 32 58 17.641 46.359 6 32 6zM33.813 57.93C33.214 57.972 32.61 58 32 58 32.61 58 33.213 57.971 33.813 57.93zM37.786 57.346c-1.164.265-2.357.451-3.575.554C35.429 57.797 36.622 57.61 37.786 57.346zM32 58c-.61 0-1.214-.028-1.813-.07C30.787 57.971 31.39 58 32 58zM29.788 57.9c-1.217-.103-2.411-.289-3.574-.554C27.378 57.61 28.571 57.797 29.788 57.9z"></path>
+</svg>
+        </a></li>
+
+        <li><a href="mailto:abdelrahmannkamal@gmail.com" onclick="copyTextToClipboard(event, 'abdelrahmannkamal@gmail.com ')" class="link-item"><svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/></svg>
+</a>
+        </li>
+
+
+         <li><a href="tel:+201113324225" onclick="copyTextToClipboard(event, '+201113324225 ')"
+           class="link-item">
+         <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="655.359" height="655.359" style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality;fill-rule:evenodd;clip-rule:evenodd" viewBox="0 0 6.827 6.827"><defs><style>.fil0{fill:none}.fil2{fill:white}</style></defs><g id="Layer_x0020_1"><g id="_491463032"><path id="_491463320" class="fil0" d="M0 0h6.827v6.827H0z"/><path id="_491463128" class="fil0" d="M.853.853h5.12v5.12H.853z"/></g><g id="_491478824"><path id="_491463224" d="M.909 2.24c.067 1.39 1.968 3.158 3.255 3.57.863.275 2.148-.269 1.64-.777L5 4.23c-.122-.123-.32-.108-.439.01l-.46.462c-.992-.54-1.408-.966-1.953-1.951l.462-.462c.119-.119.132-.317.01-.439l-.803-.803C1.37.598.883 1.715.908 2.24z" /><path id="_491478584" class="fil2" d="m.909 2.24 1.24.51.462-.46c.119-.12.132-.318.01-.44l-.803-.803C1.37.598.883 1.715.908 2.24z"/><path id="_491478176" class="fil2" d="M4.164 5.81c.863.275 2.148-.269 1.64-.777L5 4.23c-.122-.123-.32-.108-.439.01l-.46.462.062 1.107z"/></g></g></svg>
+
+        </a></li>
+
+       
+      </ul>
+
+
+
+  <a  href="https://drive.google.com/file/d/1ZUHDFoImR4xSXzD2vPJIZyE9kZnkv9oJ/view" class="normal-btn" target="_blank">See my resume</a>
+
+</div>
+      </div>
+
+      <div class="intro-figure">
+<div class="hero-img"></div>
+      </div>
+    </section>
