--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,1 +1,34 @@
-<p>skills works!</p>
+<!-- skills section------------------------------------------ -->
+ <section class="section-pad gradient-dark-to-light "
+      id="skills-section">
+      
+        <h2 id="skills">Skills</h2>
+        <p id="skills-text" >
+          I will take care of your work and provide the value you need.<br />From
+          front-end design to back-end coding to database, I have the full stack
+          development skills needed to bring your digital vision to life.
+        </p>
+
+
+<div id="skills-gallery">         
+<div><img src="images/html-1.svg" /></div>
+<div><img src="images/css-3.svg"/></div>
+<div><img style=" width: 20rem;" src="images/bootstrap-logo.png"/></div>
+<div><img src="images/mui.png"/></div>
+<div><img src="images/logo-javascript.svg"/></div>
+<div><img src="images/typescript-2.svg"/></div> 
+<div><img src="images/angular-icon.png"/></div>
+<div><img src="images/cplusplus-original.svg"/></div>
+<div><img src="images//python-original.svg"/></div>
+<div><img src="images/fastapi.svg"/></div>
+<div><img src="images/flask.svg"/></div>
+<div><img src="images/nodejsLight.svg"/></div>
+<div><img src="images/express.png"/></div>
+<div><img src="images/mysql-original-wordmark.svg"/></div>
+<div><img src="images/postgresql.svg"/></div>
+<div><img src="images/mongodb-original-wordmark.svg"/></div>
+<div><img src="images/bash-2.svg"/></div>
+<div><img src="images/git-icon.svg"/></div>
+<div><img src="images/figma-icon.svg"/></div>
+          </div>
+    </section>
