--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,89 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.cdnfonts.com/css/cubano");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+/* ---------------------------------------genral-rules------------------------------- */
+:root {
+  --dark-blue: #111827;
+  --semi-dark-blue: #1f2937;
+  --light-blue: #19405e;
+  --btn-light: #1c4769;
+  --font-primary: "Open Sans", sans-serif;
+  --font-secondary: "Cubano", sans-serif;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+html {
+  font-size: 10px;
+}
+
+body {
+  font-family: var(--font-primary);
+  line-height: 1.6;
+  color: white !important;
+
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+h2,
+h1 {
+  font-family: var(--font-secondary) !important;
+  font-weight: normal !important;
+}
+
+h1 {
+  font-size: 4.5rem;
+  line-height: 1.1;
+}
+h2 {
+  font-size: 3rem;
+  padding-bottom: 1rem;
+}
+h4 {
+  font-size: 1.25rem;
+}
+
+p {
+  margin-top: 0;
+  padding: 0;
+  margin-bottom: 0.5rem;
+}
+
+.normal-btn,
+.normal-btn:link {
+  background-color: var(--btn-light);
+  color: white;
+  font-weight: 600;
+  border: none;
+  padding: 1em 2em;
+  border-radius: 0.5em;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+  box-shadow: 10px 10px 4px 1px rgba(0, 0, 255, 0.2);
+}
+
+.normal-btn:hover,
+.normal-btn:active,
+.normal-btn:focus {
+  color: white;
+  background-color: var(--light-blue);
+  box-shadow: none;
+}
+
+li {
+  list-style: none;
+}
+
+.gradient-dark-to-light {
+  background-image: linear-gradient(var(--dark-blue), var(--semi-dark-blue));
+}
+.gradient-light-to-dark {
+  background-image: linear-gradient(var(--semi-dark-blue), var(--dark-blue));
+}
+.section-pad {
+  padding: 12rem 2.2rem 1.8rem 2.2rem;
+}
